# icli

./: .gitignore  README.md  pyproject.toml
docs/: atr-time-fix.md
icli/: __main__.py  calc.py  cli.py  completer.py  helpers.py
icli/cmds/connection/: rid.py
icli/cmds/orders/: buy.py  cancel.py  evict.py  fast.py  limit.py  modify.py  scale.py  straddle.py
icli/cmds/portfolio/: balance.py  executions.py  orders.py  positions.py  report.py
icli/cmds/predicates/: auto.py  ifclear.py  ifgroup.py  iflist.py  ifrm.py  ifthen.py
icli/cmds/quote_mgmt/: colorset.py  colorsload.py  qadd.py  qclean.py  qdelete.py  qlist.py  qloadsnapshot.py  qremove.py  qrestore.py  qsave.py  qsnapshot.py
icli/cmds/quotes/: add.py  align.py  chains.py  depth.py  oadd.py  prequalify.py  qquote.py  range.py  remove.py
icli/cmds/schedule/: sched-add.py  sched-cancel.py  sched-list.py
icli/cmds/tasks/: taskcancel.py  tasklist.py
icli/cmds/utilities/: advice.py  alert.py  alias.py  calendar.py  cash.py  clear.py  daydumper.py  debug.py  details.py  expand.py  info.py  math.py  meta.py  paper.py  qualify.py  reconnect.py  reporter.py  say.py  set.py  simulate.py  unset.py
icli/engine/: __init__.py  algobinder.py  audio.py  calendar.py  clock.py  conditional.py  contracts.py  defaults.py  events.py  exchanges.py  orders.py  placement.py  portfolio.py  primitives.py  protocols.py  qualification.py  quotemanager.py  resolver.py  session.py  technicals.py  toolbar.py
tests/: conftest.py
tests/baseline/: test_calculator.py  test_calendar_funcs.py  test_contracts.py  test_debug.py  test_events.py  test_exchanges.py  test_helpers.py  test_orders.py  test_placement.py  test_portfolio.py  test_primitives.py  test_qquote.py  test_qualification.py  test_quotemanager.py  test_resolver.py  test_tinyalgo.py  test_toolbar.py
tests/integration/: test_app_construction.py  test_debug_integration.py
