[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icli"
version = "2.1.0"
description = "ibkr cli et al"
license = "Apache-2.0"
authors = [
    { name = "Matt Stancliff", email = "matt@genges.com" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "ib_async>=2.0.1",
    "pandas>2.1.0",
    "prompt-toolkit>=3.0.29",
    "loguru>0.6.0",
    "questionary>=2.0.1",
    "tableprint>=0.9.1",
    "seaborn>=0.12.2",
    "prettyprinter>=0.18.0",
    "setproctitle>=1.2.2",
    "diskcache>=5.2.1",
    "beautifulsoup4>=4.9.3",
    "tradeapis @ git+https://github.com/mattsta/tradeapis.git@3.4.6",
    "schedule>=1.1.0",
    "httpx>=0.28.1",
    "whenever>=0.6.9",
    "python-dateutil>=2.9.0.post0",
    "lark>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mypy>=1.18.2",
    "ruff>=0.5",
    "data-science-types>=0.2.23",
    "types-pytz>=2025.2.0.20250809",
    "pandas-stubs>=2.3.2.250926",
    "types-cachetools>=6.2.0.20250827",
]
textual = [
    "textual>=1.0",
    "pytest-textual-snapshot>=1.0",
]

[project.scripts]
icli = "icli.__main__:runit"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that need network or heavy computation",
    "snapshot: Textual snapshot tests",
    "integration: cross-layer integration tests",
    "baseline: characterisation tests for existing icli code",
]
filterwarnings = [
    "ignore::DeprecationWarning:ib_async.*",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
show_traceback = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "PT",
]
ignore = ["E402"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
# python-prctl is Linux-only (transitive via tradeapis→mutil→python-prctl).
# Safe to exclude: mutil uses it only for Linux process naming.
exclude-dependencies = ["python-prctl"]
